src/objects/joinapi__Join_Process__c.object
<CustomObject>
    <description>The controlling object for join processes.</description>
    <fields>
        <fullName>joinapi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the join process will be restricted to only those contacts that have the defined badges.</description>
        <inlineHelpText>When checked the join process will be restricted to only those contacts that have the defined badges.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this field makes the join process page visible to end users.</description>
        <inlineHelpText>When checked this field makes the join process page visible to end users.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Join_Process_Display_Name__c</fullName>
        <description>The name that will be presented at the top of the page.</description>
        <inlineHelpText>The name that will be presented at the top of the page.</inlineHelpText>
        <label>Join Process Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Landing_Url__c</fullName>
        <description>** System Calculated ** The landing Url calculated from the first step</description>
        <inlineHelpText>** System Calculated ** The landing Url calculated from the first step</inlineHelpText>
        <label>Landing Url</label>
        <type>Url</type>
    </fields>
    <label>Join Process</label>
    <listViews>
        <fullName>joinapi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Join Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Join Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>